--- a/package.json
+++ b/package.json
@@ -8,12 +8,30 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.7",
+    "@react-native-community/datetimepicker": "3.0.4",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/stack": "^5.14.5",
     "expo": "~40.0.0",
+    "expo-location": "~10.0.0",
     "expo-status-bar": "~1.0.3",
+    "material-icons": "^0.5.4",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-check-box": "^2.1.7",
+    "react-native-elements": "^3.3.1",
+    "react-native-fontawesome": "^7.0.0",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-get-location": "^2.1.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "~2.15.2",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "sharingan-rn-modal-dropdown": "^1.3.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
