--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~40.0.0",
     "expo-location": "~10.0.0",
     "expo-status-bar": "~1.0.3",
+    "formik": "^2.2.7",
     "material-icons": "^0.5.4",
     "moment": "^2.29.1",
     "react": "16.13.1",
@@ -23,15 +24,18 @@
     "react-native-check-box": "^2.1.7",
     "react-native-elements": "^3.3.1",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-form-validator": "^0.3.5",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-get-location": "^2.1.0",
+    "react-native-hide-show-password-input": "^1.2.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "sharingan-rn-modal-dropdown": "^1.3.1"
+    "sharingan-rn-modal-dropdown": "^1.3.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
