--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "sharingan-rn-modal-dropdown": "^1.3.1",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "expo-mail-composer": "~9.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
